# sneaky-news

./: README.md  pyproject.toml  requirements.txt
dags/: dividends_observer.py
dags/utils/div_observer/: config.py  db_connector.py  dividend_observer.py  instrument_storage.py  storage_manager.py
src/: error.py  main.py
src/data/: db_connector.py  stock.py
src/model/: stock.py
src/service/: main_page.py
src/web/: main_page.py
