[project]
name = "sneaky-news"
version = "0.1.0"
description = "Add your description here"

dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.33.0",
    "pytest>=8.3.4",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sneaky_news"]
